alignment fixed

--- a/apps/aavantan-frontend/src/scss/new-design.scss
+++ b/apps/aavantan-frontend/src/scss/new-design.scss
@@ -116,7 +116,9 @@ $dark-blue-black:#0B1B31;
     border-bottom-right-radius: 4px;
   }
   .ant-avatar-string{
-    left:23%!important;
+    left: 0px !important;
+    width: 32px;
+    text-align: center;
   }
 }
 
